Corrected some errors

--- a/styles/base.css
+++ b/styles/base.css
@@ -16,7 +16,7 @@ header h1 {
 header h1 span {
     color: #C4EA52;
 }
-header nav {
+header nav ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
