--- a/styles/base.css
+++ b/styles/base.css
@@ -105,6 +105,6 @@ footer {
     text-align: center;
     line-height: 1.8;
 }
-footer .lastmodified {
+footer .lastmodifiedcolor {
     color: #C4EA52;
 }
