--- a/styles/temples.css
+++ b/styles/temples.css
@@ -44,7 +44,7 @@ header nav ul li a {
     text-decoration: none;
     font-weight: bold;
 }
-header nav ul li:hover {
+header nav ul li a:hover {
     border-bottom: 1px solid #fff;
 }
 h2 {
